--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/styles": "^5.15.10",
     "axios": "^1.6.7",
     "dotenv": "^16.4.4",
     "md5": "^2.3.0",
