--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marvels-comics",
+  "name": "marvel-comics",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -30,9 +30,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
     "autoprefixer": "^10.0.1",
+    "esl": "^11.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
